--- a/index.html
+++ b/index.html
@@ -38,5 +38,32 @@
           </div>
 
      </section>
+
+     <section class="latest-work">
+          <h1>My Latest Work</h1>
+          <div class="one-third">
+               <img src="img/latest-work/work-1.png" alt="work1">
+          </div>
+          <div class="one-third">
+               <img src="img/latest-work/work-2.jpg" alt="work2">
+          </div>
+          <div class="one-third">
+               <img src="img/latest-work/work-3.jpg" alt="work3">
+          </div>
+     </section>
+
+     <footer>
+          <h1>What Client are say</h1>
+          <p class="bold">Bruce Moccy</p>
+          <p>Founder & CEO Alies</p>
+          <p class="text">"Lorem ipsum is simply dummy text of the pointing and typesetting industry. Lorem ipsum"</p>
+
+          <div class="message">
+               <p class="bold">Leave me a message in the</p>
+               <p class="email">programming.hero1@gmail.com</p>
+          </div>
+          <p>Programming Hero initiative. 2020 All rights Reserved</p>
+     </footer>
+
 </body>
 </html>
